--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1 SHOPPING LIST></h1>
         <div class="input group">
             <input type="text" id="item-input" placeholder="Enter an item">
-            <button id="clear button"></button>
+            <button id="clear button">clear</button>
         </div>
         <ul id="SHOPPING LIST"></ul>
         </div>
