--- a/index.html
+++ b/index.html
@@ -3,24 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SHOPPING LIST</title>
-    <link rel="stylesheet"  href="style.css">
-
-
+    <title>Shopping List</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
-
 <body>
-    <div class="container">
-        <h1 SHOPPING LIST></h1>
-        <div class="input group">
-            <input type="text" id="item-input" placeholder="Enter an item">
-            <button id="clear button">clear</button>
-        </div>
-        <ul id="SHOPPING LIST"></ul>
-        </div>
-
-    </div>
-    
-    <script src="script.js"></script>
+    <h1>Shopping List</h1>
+    <input type="text" id="itemInput" placeholder="Enter item">
+    <button id="addButton">Add</button>
+    <button id="clearButton">Clear List</button>
+    <ul id="itemList"></ul>
+    <script src="/index.js"></script>
 </body>
 </html>
