--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <input type="text" id="itemInput" placeholder="Enter item">
     <button id="addButton">Add</button>
     <button id="clearButton">Clear List</button>
+    <button id="markAsPurchased">Purchased</button>
     <ul id="itemList"></ul>
     <script src="/index.js"></script>
 </body>
